@@ -21,28 +21,13 @@ public class OnlineQuizApplication {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // Get allowed origins from environment variable or default list
-        String allowedOriginsEnv = System.getenv("CORS_ALLOWED_ORIGINS");
-        List<String> allowedOrigins;
-        
-        if (allowedOriginsEnv != null && !allowedOriginsEnv.isEmpty()) {
-            // Parse comma-separated origins from environment
-            allowedOrigins = Arrays.asList(allowedOriginsEnv.split(","));
-        } else {
-            // Default origins for development
-            allowedOrigins = Arrays.asList(
-                    "http://localhost:5173",
-                    "http://localhost:3000",
-                    "http://localhost:8080",
-                    "http://127.0.0.1:5173",
-                    "http://127.0.0.1:3000"
-            );
-        }
-        
-        configuration.setAllowedOriginPatterns(Arrays.asList("*")); // Allow all origins
+        // Allow all origins for EC2/Cloud deployment
+        configuration.setAllowedOriginPatterns(List.of("*")); 
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
-        configuration.setAllowCredentials(false); // Set to false when allowing all origins
+        configuration.setAllowedHeaders(List.of("*"));
+        
+        // Credentials must be false if allowing all origins via "*"
+        configuration.setAllowCredentials(false); 
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
